--- a/Card.html
+++ b/Card.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yu-Gi-Oh custom card</title>
+    <title>Yu-Gi-Oh Custom Card</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <style>
+        /* Estilos Generales */
         body {
             font-family: 'Cinzel', serif;
             font-weight: 800;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             background-color: #f5f5f5;
             min-width: 694px;
-            overflow-x: auto;
             transform-origin: center;
             transform: scale(0.67);
         }
 
+        /* Estilos de la Tarjeta Yu-Gi-Oh */
         .yugioh-card {
             width: 694px;
             height: 1013px;
-            perspective: 1500px;
+            perspective: 1300px;
             position: relative;
             transform-origin: center;
         }
 
+        /* Estilos para cada lado de la tarjeta */
         .side {
             width: 100%;
             height: 100%;
             position: absolute;
             backface-visibility: hidden;
-            transition: transform 3s ease;
+            transition: transform 1s ease;
         }
 
         .front {
             background-image: url('Images/pngegg.png');
-            background-size: cover;
-            z-index: 2;
         }
 
         .back {
@@ -57,19 +55,16 @@
             justify-content: center;
         }
 
-        /* 
+        /* Efectos de hover para girar la tarjeta */
         .yugioh-card:hover .front {
-            transform: rotateY(0deg);
-        } */
-
-        .yugioh-card:hover .front {
-            transform: rotateY(-180deg) scale(0.67);
+            transform: rotateY(-180deg);
         }
 
         .yugioh-card:hover .back {
             transform: rotateY(0deg);
         }
 
+        /* Estilos para el título, imagen interna y descripción */
         .head-title {
             height: 78px;
             line-height: 78px;
@@ -104,7 +99,6 @@
             font-size: 24px;
             color: #000;
             height: 110px;
-            padding: 0 10px;
             overflow: hidden;
         }
 
@@ -119,24 +113,22 @@
         }
     </style>
 </head>
-
 <body>
-
     <div class="yugioh-card">
         <div class="side front">
-            <div class="head-title">Eres un gran amigo </div>
+            <div class="head-title">Suerte en tus proyectos</div>
             <div class="inner-image"></div>
             <div class="description-container">
                 <div class="description-text">
-                    Usa esta carta para tu amigo con más side de verga :D
+                    Usa esta carta para darle suerte a tu amigo con sus proyectos y sus trabajos
                 </div>
             </div>
         </div>
         <div class="side back">
-            Un abrazo amigo <br>side DE VERGA :D
+            ¡Conseguirás el empleo 
+            <br>DE TUS SUEÑOS!
+            <br>:D
         </div>
     </div>
-
 </body>
-
 </html>
