--- a/Card.html
+++ b/Card.html
@@ -120,7 +120,7 @@
             <div class="inner-image"></div>
             <div class="description-container">
                 <div class="description-text">
-                    Usa esta carta para darle suerte a tu amigo con sus proyectos y sus trabajos
+                    Usa esta carta para darle suerte a tu amigo en sus proyectos y trabajos
                 </div>
             </div>
         </div>
